# notegold

./: .gitignore  LICENSE  Makefile  README.md  __init__.py  init_repo.sh  notegold  pyproject.toml  run.sh  setup.py
meetings/meeting_example_meeting/artifacts/: meeting_1744940671_metadata.json  ranked_topics.json  topic_ideas.json
meetings/meeting_example_meeting/logs/: process_log.json
meetings/meeting_example_meeting/notes/: example_meeting.txt
meetings/meeting_example_meeting/outputs/: aida_Streamlining_Development_Workflows_with_AI_Assisted_Tools.md
src/: __init__.py  main.py  src
src/models/: __init__.py  data_models.py
src/processors/: __init__.py  aida_formatter.py  content_generator.py  graph_utils.py  metadata_extractor.py  topic_generator.py  topic_ranker.py
src/utils/: __init__.py  file_utils.py  graph_utils.py  llm_utils.py  log_utils.py
